Thu Feb  8 12:51:00 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* doc/libxslt.sgml doc/html/*.html: updated and rebuilt the doc list

Thu Feb  8 12:36:23 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* README configure.in libxslt.spec.in: bumped to 0.1.0, getting
	  ready for the release
	* libxslt/keys.c libxslt/xslt.c: cleanup of uninitialized vars
	* tests/REC1/Makefile.am tests/REC/Makefile.am: the EXTRA list
	  was not up to date

Thu Feb  8 12:09:58 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* FEATURES libxslt/xsltInternals.h libxslt/pattern.c libxslt/keys.c:
	  added support for keys in patterns
	* tests/REC/test-12.2-2.*: added a specific testcase

Wed Feb  7 21:16:47 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/functions.c FEATURES: started adding support for key()
	* tests/REC/test-12.2-1.*: first key test

Wed Feb  7 19:46:07 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* FEATURES: updated
	* libxslt/Makefile.am libxslt/keys.[ch] libxslt/xslt.c
	  libxslt/transform.c libxslt/xsltInternals.h: started adding key
	  support
	* libxslt/xsltutils.c: warning cleanup
	* libxslt/pattern.h: fixed soopid cut'n paste prob

Tue Feb  6 10:56:38 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/transform.c libxslt/xslt.c: chased some reported
	  unitinitialized variables.

Tue Feb  6 10:55:26 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* tests/numbers/Makefile.am: fixed the EXTRA stuff

Mon Feb  5 22:02:24 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* Copyright IPR Makefile.am: added some wording and a rewrite
	  of the W3C IPR but without giving Copyright rights to W3C,
	  should suit everybody

Mon Feb  5 18:58:17 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* FEATURES: updated, added mode support for templates
	* pattern.[ch] transform.c xslt.c xsltInternals.h: added mode
	  support for templates
	* templates.c variables.c: simple fixes